# dyns-cli

./: CHANGELOG.md  README.md  pyproject.toml
src/dyns/: __init__.py  api.py  cli.py  updater.py
